@@ -43,6 +43,14 @@ AC_ARG_WITH(backend-dir,
     [  --with-backend-dir     Where to store backends if != default.],
 	opt_backend_dir=$withval)
 
+dnl --enable-exportpng
+AC_ARG_ENABLE(exportpng,
+    [  --enable-exportpng     Enable PNG export (needs gdk-pixbuf and libpng).],
+    [
+	exportpng=yes
+  	AC_DEFINE(EXPORT_PNG)
+    ])
+
 dnl Initialize automake stuff (?)
 AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
 
@@ -85,6 +93,17 @@ if eval "test x$prefix = xNONE"; then
 	prefix=$ac_default_prefix
 fi
 
+dnl GDK-PixBuf stuff
+if test "$exportpng" = "yes" ; then
+	AM_PATH_GDK_PIXBUF
+	AC_CHECK_HEADERS(png.h pngconf.h)
+	PNG_LIBS="-lpng"
+else
+	GDK_PIXBUF_CFLAGS=
+	GDK_PIXBUF_LIBS=
+	PNG_LIBS=
+fi
+
 dnl This is because I can unquote only once. Should be $datadir/gerbv/scheme
 if test -z "$opt_backend_dir"; then
     if eval "test $datadir = '${prefix}/share'"; then
@@ -112,6 +131,10 @@ AC_SUBST(GTK_LIBS)
 
 AC_SUBST(GUILE_CFLAGS)
 AC_SUBST(GUILE_LDFLAGS)
+
+AC_SUBST(GDK_PIXBUF_CFLAGS)
+AC_SUBST(GDK_PIXBUF_LIBS)
+AC_SUBST(PNG_LIBS)
 
 AC_SUBST(BACKEND_DIR)
 
