@@ -24,10 +24,10 @@
 bin_PROGRAMS = gerbv
 
 gerbv_SOURCES = gerb_image.c gerb_file.c gerber.c scm_gerber.c gerbv.c \
-		draw.c drill.c color.c amacro.c
+		draw.c drill.c color.c amacro.c exportimage.c
 
-INCLUDES = @GTK_CFLAGS@ @GUILE_CFLAGS@
-gerbv_LDADD = @GTK_LIBS@ @GUILE_LDFLAGS@
+INCLUDES = @GTK_CFLAGS@ @GUILE_CFLAGS@ @GDK_PIXBUF_CFLAGS@
+gerbv_LDADD = @GTK_LIBS@ @GUILE_LDFLAGS@ @GDK_PIXBUF_LIBS@ @PNG_LIBS@
 
 AM_CFLAGS=-Wall
 
